--- a/web_apps/nginx.conf
+++ b/web_apps/nginx.conf
@@ -19,5 +19,16 @@ http {
     ssl_certificate_key /etc/certs/tls.key;
 
   }
+  server { 
+    listen 8080;
+    location /api {
+    api write=on;
+    allow 0.0.0.0;
+    deny  142.0.0.1;
+          } 
+    location /dashboard.html {
+       root /usr/share/nginx/html;
+       }
+     }
 }
 
